# dynav

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: 5090.yaml  ablation_aux_losses.yaml  ablation_map_hybrid.yaml  ablation_map_tokens49.yaml  ablation_map_tokens9.yaml  ablation_no_direction.yaml  ablation_no_progress.yaml  ablation_readout_token.yaml  ablation_waypoint_only.yaml  baseline_map_only.yaml  baseline_obs_only.yaml  default.yaml  frodo7k.yaml  map.yaml  map_nav.yaml  paths.yaml  record_topics.yaml  rosbag_topics.yaml  train_frodobots.yaml
docs/: data_collection_guide.md
dynav/data/: __init__.py  dataset.py  transforms.py
dynav/frodo7k/: __init__.py  classify.py  qa.py  reader.py  sampling.py
dynav/losses/: navigation_losses.py
dynav/map/: __init__.py  osm_snap.py  overlay.py  renderer.py  routing.py  segment.py  tiles.py
dynav/models/: map_nav_model.py
dynav/utils/: geometry.py  metrics.py
experiments/: README.md
scripts/: build_frodobots7k_dataset.py  build_frodobots_dataset.py  build_frodobots_dataset_v2.py  collect_data.py  dynav_gui.py  eval_checkpoints.py  eval_gps_noise_curve.py  eval_trivial_baselines.py  extract_frodobots_frames.py  extract_frodobots_segments.py  extract_rosbag.py  filter_frodobots_segments.py  filter_frodobots_v2.py  infer_visualize.py  record_bag.py  sanity_check.py  train.py  verify_frodo7k_timing.py  view_samples.py  visualize_attention.py
tests/: test_decoders.py  test_encoders.py  test_losses.py  test_map.py  test_model.py  test_transforms.py
(+15 files in other folders)
