[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dynav"
version = "0.1.0"
description = "Lightweight map-conditioned navigation policy for outdoor robots"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "Pillow>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dynav*"]
